--- a/orbis_challenge/src/App.css
+++ b/orbis_challenge/src/App.css
@@ -1,14 +1,17 @@
+html {
+  overflow-y: scroll;
+}
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
 }
 
 #page-body {
-  /* display: grid;
-  grid-template-rows: 4em 1fr; */
-  max-width: 60em;
+  max-width: 40em;
   margin: 0 auto;
 }
+
 
 .twit-button {
   width: 100%;
@@ -27,7 +30,7 @@ body {
   float: right;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1em;
-  background-color: black;
+  background: transparent;
   color: red;
   padding: 0;
   border: none;
@@ -36,7 +39,7 @@ body {
 }
 
 hr {
-  padding: 10px;
+  border: 1px solid black;
 }
 
 h3, h4 {
@@ -76,22 +79,11 @@ nav a:hover {
   color: white;
 }
 
-#page-body {
-  max-width: 700px;
-  margin: auto;
-  padding-top: 64px;
-}
-
 .search-box {
   width: 100%;
   height: 4em;
   background: black;
 }
-
-/* .search-area {
-  width: 70%;
-  height: 3em;
-} */
 
 .search-form {
   position: relative;
@@ -112,14 +104,10 @@ nav a:hover {
 .dropdown {
   width: 70%;
   margin: 0 auto;
-  /* display: grid;
-  grid-template-rows: 1em 1fr; */
-  /* width: 70%;
-  margin: 0 auto; */
 }
 
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+.dropbtn:hover {
+  background-color: grey;
 }
 
 .hidden-content {
@@ -129,26 +117,20 @@ nav a:hover {
 .dropdown-content {
   width: 90%;
   margin: 0 auto;
-  /* display: grid;
-  grid-template-rows: 1em 1fr; */
-  /* width: 50%;
-  margin: 0 auto; */
   margin-bottom: 1em;
 }
 
 .dropdown-content li {
   list-style-type: none;
   width: 90%;
-  /* margin-top: 1em; */
+  margin: 0 auto;
 }
 
 .dropdown-content li p.user {
   width: 100%;
-  color: red;
   float: left;
   text-align: left;
-  /* margin-left: 2em;
-  margin-top: 2em; */
+  font-weight: bold;
   top: 10%;
   padding: 0;
   margin-top: 1em;
@@ -157,7 +139,6 @@ nav a:hover {
 
 .dropdown-content li p.post {
   width: 100%;
-  color: blue;
   float: left;
   margin-left: 1em;
   padding: 0;
